Validation des tests de performance